fixed local storage, fixed card spacing so it is horizontal, buttons link to the information of the city. Used CSS to order the list in reverse order so most recent is at the top

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
-h1 {
-    background-color: blue;
-    color: white;
-    text-align: center;
+/* Reverse the order of the buttons list so most recent is at the top */
+
+#previous-cities-search {
+    transform: rotate(180deg);
 }
 
-main {
-    display: grid;
+.created-buttons {
+    transform: rotate(-180deg);
 }
